[gd_scene load_steps=4 format=3 uid="uid://cag28c6grh7p6"]

[ext_resource type="Script" uid="uid://didsamojso6rd" path="res://pillar.gd" id="1_tcmdu"]
[ext_resource type="PackedScene" uid="uid://msl6nl15786m" path="res://art/new model/Roman Pillar.glb" id="2_tcmdu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nokgg"]
radius = 4.18593
height = 27.9905

[node name="pillar" type="CharacterBody3D" groups=["Mobs"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_tcmdu")

[node name="Pivot" type="Node3D" parent="."]

[node name="Roman Pillar" parent="Pivot" instance=ExtResource("2_tcmdu")]
transform = Transform3D(16, 0, 0, 0, 16, 0, 0, 0, 16, -0.0722398, 9.62915, 0.0219617)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." groups=["Mobs"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.0931, -0.0562512)
shape = SubResource("CapsuleShape3D_nokgg")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.9119, 0)
aabb = AABB(-8.81495, -18.8476, -7.68701, 17.6299, 37.6953, 15.374)

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
